--- a/RomRepoMgr.Core/Resources/Localization.resx
+++ b/RomRepoMgr.Core/Resources/Localization.resx
@@ -166,4 +166,10 @@
   <data name="FoundDiskWithoutMachine" xml:space="preserve">
     <value>Found a disk with an unknown machine, this should not happen.</value>
   </data>
+  <data name="NotAChdFile" xml:space="preserve">
+    <value>Not a CHD file.</value>
+  </data>
+  <data name="NoChecksumsFound" xml:space="preserve">
+    <value>No checksums found.</value>
+  </data>
 </root>
