--- a/RomRepoMgr.Core/Resources/Localization.resx
+++ b/RomRepoMgr.Core/Resources/Localization.resx
@@ -187,4 +187,7 @@
   <data name="NotAnAaruFormatFile" xml:space="preserve">
     <value>Not an AaruFormat file.</value>
   </data>
+  <data name="DatImportSuccess" xml:space="preserve">
+    <value>Imported {0} machines with {1} ROMs.</value>
+  </data>
 </root>
