--- a/RomRepoMgr/Resources/Localization.resx
+++ b/RomRepoMgr/Resources/Localization.resx
@@ -392,4 +392,7 @@ This will take a long time...</value>
     <data name="CompressionType" xml:space="preserve">
         <value>Compression</value>
     </data>
+    <data name="UseInternalDecompressorLabel" xml:space="preserve">
+        <value>Use internal decompressor (supports less formats)</value>
+    </data>
 </root>
