When using internal decompressor, bypass extracting files to temporary folder.
Not needed and is slower.

--- a/RomRepoMgr.Core/Resources/Localization.es.resx
+++ b/RomRepoMgr.Core/Resources/Localization.es.resx
@@ -186,4 +186,7 @@
     <data name="AddingMedias" xml:space="preserve">
     <value>Añadiendo medios...</value>
   </data>
+    <data name="ImportingFile" xml:space="preserve">
+        <value>Importando fichero...</value>
+    </data>
 </root>
